src/components/Welcome.css
.swal2-title{
    color:white;
    background-color: #b43434;
    padding-bottom: 5%;
}
/* .swal-text {
    background-color: #FEFAE3;
    padding: 17px;
    border: 1px solid #F0E1A1;
    display: block;
    margin: 22px;
    text-align: center;
    color: #61534e;
} */

/* .swal2-styled.swal2-confirm{
    background-color: #b43434;
} */

